# lobster

./: .env.backup.20251206_162615  .env.backup.20251206_163423  .env.backup.20251209_150440  .env.backup.20251210_123323  .env.example  .gitignore  .importlinter  BACKWARD_COMPATIBILITY_REPORT.md  BEDROCK_THINKING_FIX.md  BUG005_FIX_REPORT.md  BUGFIX_REPORT_GDS_GSE.md  BUG_FIX_SUMMARY.md  BUG_FIX_SUMMARY_publication_queue_status.md  BUG_INVESTIGATION_SUMMARY_2026-01-16.md  CALLBACK_ANALYSIS.md  CLAUDE.md  CLI_BUG_REPORT.md  CLI_COMPLETION_COLORS_UPDATE.md  CLI_REFACTORING_BUG_FIXES.md  CLI_REFACTORING_METADATA_EXTRACTION.md  CLI_REFACTORING_OPTIONS.md  CLI_REFACTORING_REMAINING_COMMANDS.md  CONFIG_COMMAND_EXAMPLE.md  CONTRIBUTING.md  DATABIOMIX_EXPORT_VALIDATION_FINAL_SUMMARY.md  DEPRECATED_AGENTS_CLEANUP_CHECKLIST.md  DEPRECATED_AGENTS_CLEANUP_PLAN.md  DEPRECATED_AGENTS_CLEANUP_SUMMARY.md  DIAGNOSTIC_REPORT_microbiome_filtering.md  DISEASE_EXTRACTION_IMPLEMENTATION_SUMMARY.md  DISEASE_EXTRACTION_RETEST_RESULTS.md  DISEASE_EXTRACTION_TEST_REPORT.md  Dockerfile  Dockerfile.server  END_TO_END_TEST_SESSION_REPORT.md  EXECUTIVE_SUMMARY.md  FINAL_BUGFIX_VALIDATION_SUMMARY.md  FINAL_SCIENTIFIC_VALIDATION_REPORT_2026-01-28.md  FINAL_TEST_BEFORE_LAUNCH.md  GLOBAL_CREDENTIALS_IMPLEMENTATION.md  (+124 more)
.firecrawl/: CLAUDE_MD_SPLIT_PROPOSAL.md  anthropic-best-practices.md  builder-io-guide.md  claude-code-docs.md  github-split-plan.md  humanlayer-guide.md  search-anthropic-docs.json  search-claude-md-split.json  search-context-management.json  search-project-instructions.json
.github/: CLAUDE.md
.mplconfig/: fontlist-v390.json
.planning/: MILESTONES.md  PARITY_CHECKLIST.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  openrouter-provider-design.md  openrouter-provider-plan.md  v1.1-MILESTONE-AUDIT.md
.test-reports/: chaos_basic.json  chaos_comprehensive.json
dist-test/: lobster_ai-0.3.3-py3-none-any.whl
docs/: COMPLIANCE_IMPLEMENTATION_LOG.md  CRYPTOGRAPHIC_INTEGRITY_USER_GUIDE.md  CUSTOM_PACKAGE_SYNC_GUIDE.md  DATABIOMIX_FINAL_DELIVERY_PACKAGE.md  FINAL_VERIFICATION_CHECKLIST.md  IMPLEMENTATION_PLAN_keyword_scanning_integration.md  LEGACY_AGENT_CLEANUP_FINAL_REPORT.md  MANUAL_ENRICHMENT_TEST_PLAN.md  MIGRATION_GUIDE.md  PYPI_RELEASE_SUMMARY.md  PYPI_SETUP_GUIDE.md  README_MEDIA.md  README_VERIFICATION_REPORT.md  SRA_COMPLIANCE_REPORT.md  SYSTEM_PROMPT_AUDIT_FIXES.md  WINDOWS_INSTALLATION.md  cloud-chromadb-handoff.md  clustering_quality_metrics_guide.md  commercial_licensing_faq.md  developer_guide_data_expert.md  embedding-ontology-service.md  error-hardening-audit.md  genomics_expert_spec.md  init-decision-tree-audit.md  metadata_assistant_data_access_patterns.md  metadata_assistant_enrichment_audit.md  migration_guide_phases_0_1.md  notebook-pipeline-export.md  olink_implementation_research.md  proteomics_integration_status.md  subclustering_guide.md
kevin_notes/: charm_ui_implementation.md
lobster/: cli.py  streamlit_app.py  version.py  version_cli.py
lobster-tui/: .gitignore  DEPRECATED.md  go.mod  go.sum
lobster-tui-ink/: CLAUDE.md  README.md  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
results/: databiomix_test_log.txt  test_run.json
scripts/: CUSTOM_PACKAGE_VERIFICATION.md  README_LINK_CHECKER.md  README_SYNC_INFRASTRUCTURE.md  agent_prompt_concat.py  build_ontology_embeddings.py  check_wiki_links.py  cleanup_databiomix_package.sh  custom_package_allowlist.txt  custom_package_allowlist_databiomix.txt  databiomix_pipeline.py  fix_databiomix_imports_pep420.sh  generate_allowlist.py  generate_wiki_dashboard.py  go_tui_protocol_smoke.py  install.sh  lint_wiki_markdown.py  profile_init_client.py  profile_startup.py  public_allowlist.txt  quick_verify.sh  release.sh  run_chaos_analysis.py  supervisor_prompt_concat.py  sync_metadata_assistant_to_databiomix.sh  sync_to_custom.py  sync_to_databiomix.py  sync_to_public.py  sync_wikis.py  test_actual_startup.py  test_actual_ux.py  test_cli_flow.sh  test_lazy_imports.py  test_premium_activation.py  test_wiki_code_examples.py  update_service_imports.py  validate_agent_service_apis.py  verify_custom_package.py  wiki_public_allowlist.txt
skills/: CLAUDE.md  scratchpad_cyto_qwen_guide.md
tests/: README.md  REGRESSION_TEST_AGENT_PROMPT.md  conftest.py  real_world_validation.py  run_integration_tests.py  run_tests.sh  test_expert_handoffs.py  test_kevin_bugs.py  test_kevin_bugs_with_data.py  test_plugin_contract.py  test_publication_cache_access.py  test_scvi_integration_validation.py  test_visualization_expert.py  test_worker_status_cloud_query.py
wiki/: 01-getting-started.md  02-installation.md  03-configuration.md  04-user-guide-overview.md  05-cli-commands.md  06-data-analysis-workflows.md  07-data-formats.md  08-developer-overview.md  09-creating-agents.md  12-testing-guide.md  13-api-overview.md  15-agents-api.md  16-services-api.md  18-architecture-overview.md  19-agent-system.md  20-data-management.md  22-performance-optimization.md  23-tutorial-single-cell.md  24-tutorial-bulk-rnaseq.md  25-download-queue-system.md  25-tutorial-proteomics.md  26-tutorial-custom-agent.md  27-examples-cookbook.md  28-troubleshooting.md  29-faq.md  30-glossary.md  31-data-expert-agent-enhancements.md  32-agent-guided-formula-construction.md  34-architecture-diagram.md  35-download-queue-system.md  35-manual-annotation-service.md  36-supervisor-configuration.md  37-publication-intelligence-deep-dive.md  38-workspace-content-service.md  39-two-tier-caching-architecture.md  40-protein-structure-visualization.md  41-migration-guides.md  42-data-integrity-and-compliance.md  42-docker-deployment-guide.md  (+18 more)
wiki.backup.v2x/: 02-installation.md  03-configuration.md  06-data-analysis-workflows.md  15-agents-api.md  16-services-api.md  18-architecture-overview.md  19-agent-system.md  28-troubleshooting.md  29-faq.md  33-api-documentation.md  41-migration-guides.md  43-docker-deployment-guide.md  43-optional-dependencies.md  44-custom-providers-guide.md  45-agent-customization-advanced.md  Home.md  README.md
(+1547 files in other folders)
